# sphinxilator

./: .buildinfo  .gitignore  BRANCH.md  CHANGELOG.rst  GEMINI.md  README.rst  ROADMAP.md  WORKFLOW_UPDATE.md  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  log.html  logs.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.archive/grav-theme-photon/: .ctags  .gitignore
.archive/grav-theme-photon/blueprints/: article.yaml  default.yaml
.archive/grav-theme-photon/css/: photon-print.css  photon-print.css.map  photon.css  photon.css.map
.archive/grav-theme-photon/docs/: index.md
.archive/grav-theme-photon/js/: article.js  pan-zoom.js
.archive/grav-theme-photon/languages/: en.yaml
.archive/grav-theme-photon/scaffolds/: article.md
.archive/grav-theme-photon/templates/: README.md  article.html.twig  default.html.twig  error.html.twig  form.html.twig  formdata.html.twig  login.html.twig
.doctrees/: about.doctree  changelog.doctree  connect.doctree  environment.pickle  glossary.doctree  index.doctree  intro.doctree  todos.doctree
.doctrees/demos/: demo.doctree  index.doctree
.doctrees/log/: index.doctree
.doctrees/log/24.125-164141/: index.doctree
.doctrees/log/24.126-084330/: index.doctree
.doctrees/log/24.126-084512/: index.doctree
.doctrees/mission/: index.doctree
.doctrees/modules/: index.doctree
.doctrees/modules/api/: index.doctree
.doctrees/refs/: index.doctree
.doctrees/usage/: index.doctree
.github/workflows/: action.yml
_modules/: build_sass.html  index.html  publish.html
_modules/photon_platform/: sphinxilator.html
_modules/publish/: __main__.html  app.html  global_conf.html  publish.html
_modules/publish/directives/: collection.html
_sources/: about.rst.txt  changelog.rst.txt  glossary.rst.txt  index.rst.txt  intro.rst.txt
_sources/log/24.126-084330/: index.rst.txt
_sources/mission/: index.rst.txt
_sources/modules/: index.rst.txt
_sources/modules/api/: index.rst.txt
_static/css/: styles.css
about/: index.html
categories/: .html  publish.html
changelog/: index.html
connect/: index.html
demos/: demo.html  index.html
demos/demo/: index.html
docs/: .buildinfo  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  log.html  logs.html  objects.inv  py-modindex.html  search.html  searchindex.js  todos.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/demos/: demo.html  index.html
docs/log/: 2024.html  archive.html  category.html  drafts.html  index.html  tag.html
docs/mission/: index.html
docs/modules/: index.html
docs/refs/: index.html
docs/usage/: index.html
docsrc/: conf.py  connect.rst  glossary.rst  index.rst
docsrc/modules/: index.rst  package.rst  photon_platform.publish.app.rst  photon_platform.publish.global_conf.setup_globals.rst  photon_platform.publish.publish.Publish.rst  photon_platform.publish.publish.rst  photon_platform.sphinxilator.app.rst  photon_platform.sphinxilator.global_conf.rst  photon_platform.sphinxilator.global_conf.setup_globals.rst  photon_platform.sphinxilator.sphinxilator.Sphinxilator.rst  photon_platform.sphinxilator.sphinxilator.rst
docsrc/usage/: index.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: 2024.html  archive.html  atom.xml  category.html  drafts.html  index.html  tag.html
log/2024/: index.html
log/24.125-164141/: index.html  index.rst
log/24.126-084330/: index.html
log/24.126-084512/: index.html
log/archive/: index.html
log/category/: index.html  status.html
log/drafts/: index.html
log/tag/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
modules/api/: index.html
py-modindex/: index.html
refs/: index.html
search/: index.html
tags/: code.html  introduction.html  test.html  usage.html
todos/: index.html
usage/: index.html
(+183 files in other folders)
