[project]
name = "photon-platform-sphinxilator"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "all the tools and themes for publishing with Sphinx"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
    "sphinx-carousel",
]

# [project.scripts]
# sphinxilator = "photon_platform.sphinxilator.__main__:run"

[project.entry-points."sphinx.html_themes"]
sphinxilator_theme = "photon_platform.sphinxilator.theme"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["photon_platform"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "photon_platform.sphinxilator.__version__"}

[project.urls]
"Website" = "https://photon-platform.github.io/sphinxilator"
"Repository" = "https://github.com/photon-platform/sphinxilator"
"Issues" = "https://github.com/photon-platform/sphinxilator/issues"
